# actgpr

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
docs/: conf.py  index.rst  tutorial.rst
docs/api/: actgpr.rst
src/actgpr/: __init__.py  acquisition.py  mrr.py  objective.py  objective_fn.py  plotting.py  run.py  surrogate.py
tests/regression/: test_quadratic_baseline.py
tests/regression/data/: quadratic_baseline.csv
tests/unit/: conftest.py  test_acquisition.py  test_mrr.py  test_objective.py  test_objective_fn.py  test_plotting.py  test_run.py  test_surrogate.py
